# blog

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CNAME  README.md  go.mod  hugo.toml  hugo.yaml  justfile  pyproject.toml  renovate.json
.claude/: settings.local.json
.github/workflows/: pages.yaml  publish.yml
assets/css/: custom.css
assets/js/: copy-markdown.js
config/_default/: hugo.toml  languages.en.toml  menus.en.toml  params.toml
content/: _index.md  about.md
content/blog/: _index.md
content/blog/01-groundup-linear-regression/: index.md  linear_regression.md  linear_regression.py
content/blog/02-groundup-linear-classifier/: index.md  linear_classifier.md  linear_classifier.py
content/blog/groundup-linear-classifier/: index.md
content/blog/groundup-linear-regression/: index.md
content/blog/linear-classifier/: index.md  linear_classifier.md
content/blog/linear-regression/: index.md  linear_regression.md
content/posts/: _index.md
content/talks/: _index.md
content/til/: _index.md  claude-code-1.md  neovim-lsp.md  pytorch-repr.md  setup-blog.md  trackio.md
data/: talks.json
layouts/: home.html  list.rss.xml
layouts/_partials/: favicons.html
layouts/about/: single.html
layouts/blog/: list.html  single.html
layouts/partials/: search.html
layouts/partials/blog/: copy-markdown.html  post-row.html  toc.html
layouts/partials/custom/: head-end.html
layouts/shortcodes/: include-md.html
