[project]
name = "blog"
version = "0.1.0"
description = "Tooling for marimo-backed blog content."
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "torch>=2.9.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "marimo>=0.19.11",
    "ruff>=0.15.1",
    "rust-just>=1.46.0",
]
